--- a/index.ipynb
+++ b/index.ipynb
@@ -583,7 +583,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = None\n",
+    "set_5 = sample_dice == (5)\n",
     "set_6 = None"
    ]
   },
