--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -587,11 +587,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "set_5_6 = (set_5 + set_6)"
+    "set_5_6 = None"
    ]
   },
   {
