automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -596,13 +596,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "set_any_5_6 = None\n",
+    "set_any_5_6 = set_5_6.any()\n",
     "print(set_any_5_6) "
    ]
   },
