--- a/index.ipynb
+++ b/index.ipynb
@@ -641,7 +641,7 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = None\n",
+    "sum_dice = len(list())\n",
     "sum_8 = None"
    ]
   },
