automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -635,20 +635,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "lambda cannot contain assignment (<ipython-input-37-b9c6f3ba3e37>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-b9c6f3ba3e37>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sum_dice = sum(list(filter(lambda x: sum(x) = 8, sample_dice)))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m lambda cannot contain assignment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sum_dice = sum(list(filter(lambda x: sum(x) = 8, sample_dice)))\n",
+    "sum_dice = sum(list(filter(lambda x: sum(x) == 8, sample_dice)))\n",
     "sum_dice\n",
     "sum_8 = None"
    ]
