--- a/index.ipynb
+++ b/index.ipynb
@@ -639,9 +639,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_dice = sum(list(filter(lambda x: sum(x) == 8, sample_dice)))\n",
-    "sum_dice\n",
-    "sum_8 = None"
+    "sum_dice = np.sum(sample_dice, axis = 1)\n",
+    "sum_8 = sum(sum_dice == 8)"
    ]
   },
   {
